[package]
name = "pts-news"
description = "Tools to fetch and parse daily news from the PTS News website"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/x807x/pts-news"
homepage = "https://github.com/x807x/pts-news"

[dependencies]
log = "0.4.22"
reqwest = "0.12.9"
scraper = "0.22.0"

[dev-dependencies]
chrono = "0.4.39"
colored = "2.2.0"
env_logger = "0.11.5"
tokio = { version = "1.42.0", features = ["full"] }
